test/testdata/classes/methods/property_accessors/clashing_method_read_write_error.lox
class Foo {
  get bar() {}
  set bar(_) {}
  static bar() {}

  // error: 'bar' has already been declared as a property accessor
  // lint error: 'bar' has already been declared as a property accessor
  bar() {}
}

_ = Foo;
